Fixed alignments issues w/ the Main section cards

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Glory:wght@300&display=swap');
 
+/*General Page Style*/
+
+body {
+    background-color: white;
+    font-family: Glory, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+/*Logo & Navigation Menu Style*/
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -13,6 +27,22 @@ nav a {
     padding: 35px;
 }
 
+header {
+    background-color: rgb(0, 126, 167, .7);
+    color: #683935;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav a:hover {
+    background-color: #5CB8D3;
+    color: #003B5F;
+}
+
+
+
+
+/*Hero & Booking Style*/
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
     color: #FFE965;
@@ -25,40 +55,6 @@ nav a {
 .button-box {
     text-align: center;
     color: white;
-}
-
-main section {
-    text-align: center;
-}
-
-main section img {
-    box-sizing: border-box;
-}
-
-#background {
-    height: 725px;
-    grid-column: 1/11;
-    grid-row: 4/9;
-}
-
-body {
-    background-color: white;
-    font-family: Glory, Helvetica, sans-serif;
-    font-size: 22px;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: rgb(0, 126, 167, .7);
-    color: #683935;
-    display: grid;
-    grid-template-columns: 150px auto;
-}
-
-nav a:hover {
-    background-color: #5CB8D3;
-    color: #003B5F;
 }
 
 .book, .join {
@@ -76,27 +72,8 @@ nav a:hover {
     color: #003B5F;
 }
 
-#background {
-    background-color: #003B5F;
-    color: white;
-}
-
-.msg {
-    background-color: #003B5F;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-
-footer {
-    background-color: #5CB8D3;
-    padding: 25px 50px;
-    margin-top: 200px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+#hero-img {
+    width: 100%;
 }
 
 .home-title {
@@ -110,6 +87,58 @@ h4 {
     color: #007EA7;
 }
 
+
+
+
+
+
+/*Main Section & Services Style*/
+main section {
+    text-align: center;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+#background {
+    height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+    background-color: #003B5F;
+    color: white;
+}
+
+.msg {
+    background-color: #003B5F;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
 .msg h2 {
     color: #5CB8D3;
     font-family: Glory, Helvetica, sans-serif;
@@ -119,6 +148,21 @@ h4 {
     color: white;
     font-size: .8em;
     padding-bottom: 15px;
+}
+
+
+
+
+
+
+/*Footer Style*/
+footer {
+    background-color: #5CB8D3;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer h3 {
@@ -141,12 +185,9 @@ footer a:hover {
 .icon {
     width: 80px;
     padding-top: 10px;
-    height:90px
 }
 
-#hero-img {
-    width: 100%;
-}
+
 
 footer h3 a:hover {
     text-decoration: underline;
@@ -210,24 +251,4 @@ nav {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
-}
-
-.home-grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-}
-
-.rivers-card, {
-    grid-column: 2/4;
-    grid-row: 2/3;
-}
-
-.camping-card {
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-
-.rapids-card {
-    grid-column: 8/10;
-    grid-row: 2/3;
 }
